<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juliana.listviewpersonalizado.MainActivity">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/mainActivity_listViewRestaurants"
        android:padding="10dp"
        android:layout_above="@+id/scrollView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/mainActivity_listViewRestaurants">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/stringTitleAddRestaurant"
                android:typeface="serif"
                android:textSize="25sp"
                android:textColor="@color/title"
                android:id="@+id/titleCreateRestaurant"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/stringTitleName"
                    android:textColor="@color/title"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainActivity_editTextName" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/stringTitleAddress"
                    android:textColor="@color/title"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainActivity_editTextAddress" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/stringTitlePoints"
                    android:textColor="@color/title"
                    android:id="@+id/textView5" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainActivity_editTextPoints" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/stringTitleType"
                    android:textColor="@color/title"
                    android:id="@+id/mainActivity_textView4" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringRadioButtonBuffet"
                        android:textColor="@color/letters"
                        android:id="@+id/mainActivity_radioButtonBuffet"
                        android:checked="true"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/stringRadioButtonGourmet"
                        android:textColor="@color/letters"
                        android:id="@+id/ mainActivity_radioButtonGourmet" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringRadioButtonFastFood"
                        android:textColor="@color/letters"
                        android:id="@+id/mainActivity_radioButtonFastFood" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:textColor="@color/buttonLetter"
                android:text="@string/stringButtonCreate"
                android:id="@+id/mainActivity_buttonCreate"
                android:typeface="serif"
                android:textSize="20sp"
                android:background="@color/title"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
